# cashy

./: .gitignore  Dockerfile  README.md  example.env  main.py  pyproject.toml
.github/workflows/: docker-build-deploy.yml
cashy/: agent.py  vector_store.py
config/: cashy-prompt.txt  prompt_messages_citation.json  prompt_messages_citation_forced.json
interface/: app.py
src/: constants.py  requirements.txt
src/KG/: arguments.py  integrated_qa_retriever.py  kg_data_parser.py  kg_qa_retriever.py
src/KG/prompts/: integrated_qa_prompt.txt  kg_qa_prompt.txt
src/RAG/: arguments.py  custom_excel_loader.py  document_chunker.py  document_loader.py  excel_preprocessor.py  qa_retriever.py  utils.py  vector_store.py
src/RAG/prompts/: prompt_messages.json
src/data/chromaDB_test_eval/: chroma.sqlite3
src/eval/: evaluation_pipeline.py  rag_evaluation_metrics.py  synthetic_data_generator.py
src/eval/evaluation_runs/: evaluation_data_2023-11-27_002613.json  evaluation_data_2023-11-27_002620.json  evaluation_data_2023-11-27_010630.json  evaluation_data_2023-11-27_010728.json  evaluation_data_2023-11-27_010734.json
src/eval/ground_truth_template/: ground_truth_eval_template.csv
src/test/: constants.py  test_customexcel_loader.py  test_data_chunker.py  test_evaluation.py  test_pdfdirectory_loader.py  test_qa_retriever.py  test_vector_store.py
src/test/test_data/: prompt_messages.json
src/test/test_data/excel_files/: test_document_loader_excel.xlsx
